dodao u dnevnik dokumentacije

--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -23,6 +23,8 @@
 	0.5	& Stvorena mapa sa slikama dijagrama & Paula Močinić  & 12.11.2023	\\ \hline
 	\\ \hline
 	0.6	& Dodani ostali zahtjevi & Paula Močinić  & 13.11.2023	\\ \hline
+	\\ \hline
+	0.7	& Dodan opis arhitekture i dizajna sustava & Lovro De Villa  & 16.11.2023	\\ \hline
 	
 \end{longtblr}
 
