--- a/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
+++ b/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
@@ -99,16 +99,16 @@
 				
 				\vspace*{\stretch{12.0}}
 				\normalsize
-				Grupa: \textit{Leteći medvjedići}\\
-				Voditelj: \textit{Mario Olčar}\\
+				Grupa: Leteći medvjedići\\
+				Voditelj: Mario Olčar\\
 				
 				
 				\vspace*{\stretch{1.0}}
-				Datum predaje: \textit{17. 11. 2023.}\\
+				Datum predaje: 17. 11. 2023.\\
 				
 				\vspace*{\stretch{4.0}}
 				
-				Nastavnik: \textit{Hrvoje Nuić, mag. ing.}\\
+				Nastavnik: Hrvoje Nuić, mag. ing.\\
 				
 			\end{center}
 			
