isparvljene gramatičke pogreške u dokumentaciji

--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -142,7 +142,7 @@ i u vezi \emph{One-to-Many} s entitetom Rezervacija preko atributa ParkingID.
 	\end{longtblr}	
 \paragraph{}
 {\emph{Rezervacija}\\
-Entitet Rezervacija sadrži informacije vezanie za rezervacije pojedinih parkirnih mjesta i sadrži sljedeće atribute:
+Entitet Rezervacija sadrži informacije vezane za rezervacije pojedinih parkirnih mjesta i sadrži sljedeće atribute:
 ReservationID koji je primarni ključ entiteta, KorisnikID, ParkingID, DateTimeStart, DateTimeEnd i ParkingPlaceId. Strani ključevi entiteta \emph{Rezervacija} su KorisnikID i ParkingID.
 Navedeni je entitet u vezi \emph{Many-to-One} s entitetom Korisnik preko atributa KorisnikID.
 }
