--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -24,7 +24,9 @@
 	\\ \hline
 	0.6	& Dodani ostali zahtjevi & Paula Močinić  & 13.11.2023	\\ \hline
 	\\ \hline
-	0.7	& Dodan opis arhitekture i dizajna sustava & Lovro De Villa  & 16.11.2023	\\ \hline
+	0.7	& Napravljen predložak & Ivan Bušljeta  & 15.11.2023	\\ \hline 
+	\\ \hline
+	0.8	& Dodan opis arhitekture i dizajna sustava & Lovro De Villa  & 16.11.2023	\\ \hline
 	
 \end{longtblr}
 
