--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -291,7 +291,7 @@
 \begin{packed_item}
 	
 	\item \textbf{Glavni sudionik: } Korisnik
-	\item  \textbf{Cilj:}Stvorit korisnicki račun za pristup serveru
+	\item  \textbf{Cilj:} Stvoriti korisnički račun za pristup serveru
 	\item  \textbf{Sudionici:} Baza podataka
 	\item  \textbf{Preduvjet:} -
 	\item  \textbf{Opis osnovnog tijeka:}
@@ -299,19 +299,19 @@
 	\item[] \begin{packed_enum}
 		
 		\item Korisnik odabire opciju za registraciju
-		\item Korisnik unosi potrebne korisnicke podatke
-		\item Korisnik prima obavijest o uspjesnoj registraciji
+		\item Korisnik unosi potrebne korisnčke podatke
+		\item Korisnik prima obavijest o uspješnoj registraciji
 		
 	\end{packed_enum}
 		\item  \textbf{Opis mogućih odstupanja:}
 	\item[] \begin{packed_item}
 		
-		\item[2.a] Odabir vec zauzetog korisničkog imena i/ili e-maila, unos korisničkog podatka u nedozvoljenom formatu ili pruzanje neispravnoga e-maila
+		\item[2.a] Odabir već zauzetog korisničkog imena i/ili e-maila, unos korisničkog podatka u nedozvoljenom formatu ili pružanje neispravnoga e-maila
 		\item[] \begin{packed_enum}
 			
-			\item {Sustav obavjestava korisnika o neuspjelom upisu i vra ća ga na stranicu za registraciju} 
+			\item {Sustav obavještava korisnika o neuspjelom upisu i vraća ga na stranicu za registraciju} 
 			
-			\item {Korisnik mijenja potrebne podatke te zavrsava unos ili odustaje od registracije}
+			\item {Korisnik mijenja potrebne podatke te završava unos ili odustaje od registracije}
 		\end{packed_enum}
 		
 	\end{packed_item}
@@ -386,14 +386,14 @@
 
 \section{Ostali zahtjevi}
 	\begin{packed_item}
-		\item {Sustav treba omoguciti rad više korisnika u stvarnom vremenu}
+		\item {Sustav treba omogućiti rad više korisnika u stvarnom vremenu}
 		\item {Korisničko sučelje i sustav moraju podržavati hrvatsku abecedu (dijakritičke znakove) pri unosu i prikazu tekstualnog sadrzaja}
-		\item {Izvrsavanje dijela programa u kojem se pristupa bazi podataka ne smije trajati duže od nekoliko sekundi}
+		\item {Izvršavanje dijela programa u kojem se pristupa bazi podataka ne smije trajati duže od nekoliko sekundi}
 		\item {Sustav treba biti implementiran kao web aplikacija koristeći objektno-orijentirane jezike}
 		\item {Sustav treba biti jednostavan za korištenje, korisnici se moraju znati koristiti sučeljem bez opširnih uputa }
 		\item {Sustav kao valutu koristi EURO}
-		\item {Veza s bazom podataka mora biti kvalitetno zastičena, brza i otporna na vanjske greške}
-		\item {Pristup sustavu mora biti omogucen iz javne mreže pomoću HTTPS}
+		\item {Veza s bazom podataka mora biti kvalitetno zaštićena, brza i otporna na vanjske greške}
+		\item {Pristup sustavu mora biti omogućen iz javne mreže pomoću HTTPS}
 	\end{packed_item}
 
 
