--- a/Dokumentacija/Opis_projektnog_zadatka.tex
+++ b/Dokumentacija/Opis_projektnog_zadatka.tex
@@ -2,7 +2,7 @@
 
 %\textbf{\textit{dio 1. revizije}}\\
 
-{Cilj ovog projekta je razviti programsku podršku za stvaranje web aplikacije "SpotPicker" koji će omogučiti rezervaciju, naplatu parkiranja i pregled slobodnih parkirališnih mjesta za automobile i bicikle. }
+{Cilj ovog projekta je razviti programsku podršku za stvaranje web aplikacije "SpotPicker" koji će omogućiti rezervaciju, naplatu parkiranja i pregled slobodnih parkirališnih mjesta za automobile i bicikle. }
 \paragraph*{}{Aplikacija za rezerviranje parkinga pruža niz koristi kako vozačima, tako i vlasnicima parkirališta. Vozači često gube vrijeme tražeći slobodna parkirališta, pogotovo u gusto naseljenim područjima ili tijekom gužvi. Aplikacija za rezerviranje parkinga im omogućuje da rezerviraju svoje mjesto, čime se smanjuje potreba za traženjem parkirnog prostora i eliminira stres povezan s time. Također rezervacija pruža vozačima sigurnost i garanciju parkirnog prostora kad stignu na odredište. To je posebno korisno tijekom raznih događanja, koncerata illi sportskih manifestacija, kada je potražnja za parkirnim mjestima visoka. S druge strane vlasnici parkirališta mogu bolje upravljati svojim resursima koristeći informacije o rezervacijama. Aplikacija omogućuje praćenje popunjenosti parkirališta, što pomaže u planiranju i optimizaciji korištenja prostora. Ovo može rezultirati boljim iskorištavanjem kapaciteta parkirališta, povećanjem prihoda i poboljšanjem općeg iskustva korisnika.}
 \paragraph*{}{Kako bi se ovo postiglo, stranica mora biti pregledna, razumljiva i korisnicima lako dostupna. Do svega na stranici trebalo bi moći doći u samo nekoliko klikova. Sučelje mora biti vizualno atraktivno i jednostavno za korištenje. Korisniku moraju biti lako dostupne i vidljive sve najvažnije informacije o pojedinom parkingu: koliko je mjesta slobodno na pojedinom parkingu, njena cijena i moguća ograničenja vezana uz vozila.}
 \paragraph*{}{Posebnu pažnju trebalo bi posvetiti i originalnosti web stranice po čemu istaknuti u usporedbi s konkurencijom i time privukla više korisnika. Također tada bi i više parkirališta moglo odabrati našu stranicu za rezervaciju i naplatu parkinga.}
