Ispravak pogreške, dodan dijagram modela i njegov opis

--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -1,5 +1,48 @@
 \chapter{Arhitektura i dizajn sustava}
-
+\paragraph{}{Web aplikacija je softverski program koja se izvršava na web poslužitelju i koja omogućuje korisnicima pristup i interakciju s raznim funkcijama, uslugama ili informacijama putem web preglednika.}
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=1\linewidth]{dijagrami/arhWeb.png}
+	\caption{ Arhitektura sustava}
+	\label{fig:arhsustava}
+\end{figure}
+\paragraph{}{Povezanost između web aplikacije i web poslužitelja je ključna za funkcioniranje web aplikacija. Evo osnovne poveznice:}
+\begin{packed_item}
+		\item  \textbf{ Klijentska strana (Frontend):}
+		\begin{packed_item}
+			\item { Web aplikacija obično ima klijentsku stranu koja se izvršava u web pregledniku korisnika. Ova klijentska strana može biti izrađena korištenjem HTML-a, CSS-a i JavaScripta, a može koristiti i frontend okvire poput React-a kojeg smo odabrali u izradi naše web aplikacije.
+			}
+		\end{packed_item}
+		\item  \textbf{Poslužiteljska strana (Backend):}
+			\begin{packed_item}
+			\item {Backend dio web aplikacije izvršava se na web poslužitelju. Ovdje se izvršava poslovna logika aplikacije, upravlja se bazom podataka, obrađuju se zahtjevi korisnika, provjerava se autentikacija, autorizacija itd. Backend se obično piše u jezicima poput Node.js, Pythona, Rubyja, Java-e, a mi smo se odlučili za C\verb|#| zajedno s .NET radnim okvirom.}
+			\end{packed_item}
+			\paragraph{}{}\paragraph{}{}
+		\item  \textbf{ Komunikacija između klijenta i poslužitelja:}
+		\begin{packed_item}
+			\item {Web aplikacija komunicira s poslužiteljem putem HTTP (Hypertext Transfer Protocol) zahtjeva i odgovora. Kada korisnik interagira s web aplikacijom putem svog preglednika (klikne na gumb, ispuni obrazac), preglednik šalje zahtjev web poslužitelju. Web poslužitelj obrađuje taj zahtjev i šalje odgovor natrag pregledniku.
+			}
+		\end{packed_item}
+		\item  \textbf{ Povratne informacije korisniku:
+		}
+		\begin{packed_item}
+			\item {Kada web poslužitelj obradi zahtjev, šalje odgovor natrag na klijentsku stranu (preglednik). To može uključivati HTML, CSS, JavaScript, podatke iz baze podataka ili druge resurse koji se prikazuju korisniku putem web preglednika.
+			}
+		\end{packed_item}
+		
+\end{packed_item}
+\paragraph{}{Odabrali smo Microsoft Visual Studio kao naše razvojno okruženje. Koristit ćemo arhitekturu sustava temeljenu na MVC (Model-View-Controller) konceptu. Ovaj koncept podržan je unutar .NET radnog okvira te pruža gotove predloške koji olakšavaju razvoj web aplikacija.
+	Jedna od glavnih karakteristika MVC koncepta je njegova sposobnost za nezavisni razvoj pojedinih dijelova aplikacije. Ovo omogućuje lakše testiranje aplikacije kao i jednostavnije dodavanje novih svojstava u sustav bez potrebe za velikim modifikacijama.
+}
+\paragraph{}{MVC arhitektura se sastoji od:
+}
+ \begin{packed_enum}
+	
+	\item Model: Model predstavlja sloj podataka aplikacije i poslovnu logiku. Ovdje se podaci obrađuju, pohranjuju i pristupa im se. Model je odgovoran za interakciju s bazom podataka ili nekim drugim izvorom podataka, kao i za manipulaciju tim podacima prema zahtjevima poslovne logike.
+	\item View: View predstavlja korisničko sučelje aplikacije, odnosno ono što korisnik vidi i s čime interagira. Pogled prikazuje podatke iz Modela na način koji je razumljiv i koristan korisniku. Obično se radi o HTML-u, CSS-u, JavaScriptu ili nekom drugom obliku sučelja koje korisnik može vidjeti.
+	\item Controller: Kontroler je posrednik između Modela i View-a. On obrađuje korisničke zahtjeve primljene putem korisničkog sučelja (View), upravlja tim zahtjevima i ažurira Model prema tim zahtjevima. Kontroler reagira na akcije korisnika, ažurira podatke u Modelu i određuje koji View će se prikazati korisniku.
+	
+\end{packed_enum}
 \section{Baza podataka}
 
 \paragraph{}
@@ -36,13 +79,12 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 						rowhead = 1,
 					} %definicija širine tablice, širine stupaca, poravnanje i broja redaka naslova tablice
 					\hline \SetCell[c=3]{c}{\textbf{ConfirmationLink}}	 \\ \hline[3pt]
-					\SetCell{LightGreen}Confirmation LinkID & INT	&  	TO DO  	\\ \hline
+					\SetCell{LightGreen}Confirmation LinkID & INT	&  	jedinstveni ID svakog linka sa potvrdu pri registraciji  	\\ \hline
 					\SetCell{LightBlue} Korisnik ID	& INT & jedinstveni ID korisnika 	\\ \hline
-					Link	& NVARCHAR &  TO DO	\\ \hline 
+					Link	& NVARCHAR &  točan link koji se koristio za potvrdu registracije	\\ \hline 
 					isValid & BIT &  informacija o potvrdi korisnika \\ \hline  
-	\end{longtblr} \\
-
-\paragraph{}
+	\end{longtblr}
+\paragraph*{}
 {\emph{Korisnik}\\
 Entitet Korisnik sadrži informacije vezane za registrirane korisnike aplikacije i sadrži sljedeće atribute:
 KorisnikID, Username, Password, RazinaPristupa, Name, Surname, PictureData, BankAccountNumber, Email, AccountEnabled i EmailVerified. 
@@ -63,17 +105,16 @@ i u vezi \emph{One-to-One} s entitetom Wallet preko atributa KorisnikID.}
 					\hline \SetCell[c=3]{c}{\textbf{Korisnik}}	 \\ \hline[3pt]
 					\SetCell{LightGreen}KorisnikID & INT	&  	jedinstveni ID korisnika  	\\ \hline
 					Username	& NVARCHAR &  korisničko ime	\\ \hline 
-					Password & NVARCHAR &  TO DO \\ \hline 
-					Razina Pristupa & INT & TO DO	\\ \hline 
+					Password & NVARCHAR &  lozinka \\ \hline 
+					Razina Pristupa & INT & voditelj parkinga(1) ili običan korisnik(0)	\\ \hline 
 					Name	& VARCHAR &   ime korisnika	\\ \hline
 					Surname	& VARCHAR &  prezime korisnika \\ \hline
-					PictureData	& VARBINARY &   TO DO	\\ \hline
+					PictureData	& VARBINARY &   slika osobne	\\ \hline
 					BankAccount Number	& VARCHAR &  broj bankovnog računa korisnika	\\ \hline
 					Email	& VARCHAR &   korisnikova e-mail adresa	\\ \hline
 					Account Enabled	& BIT &  informacija o potvrdi profila korisnika od strane administratora	\\ \hline
 					Email Verified	& BIT &   informacija o potvrdi profila korisnika putem e-maila	\\ \hline
-	\end{longtblr} \\
-
+	\end{longtblr}
 \paragraph{}
 {\emph{Parking}\\
 Entitet Parking sadrži informacije vezane za opis i konfiguraciju parkirališta te sadrži sljedeće atribute:
@@ -94,15 +135,14 @@ i u vezi \emph{One-to-Many} s entitetom Rezervacija preko atributa ParkingID.
 					\SetCell{LightGreen}ParkingID & INT	&  	jedinstveni ID parkirališta  	\\ \hline
 					Name	& NVARCHAR &  naziv parkirališta	\\ \hline 
 					Description & VARCHAR &  opis parkirališta \\ \hline 
-					Photo & VARBINARY	&  	TO DO	\\ \hline 
+					Photo & VARBINARY	&  	fotografija parkinga	\\ \hline 
 					PricePerHour & INT	&  	cijena parkirališnog mjesta po satu	\\ \hline
 					Capacity & INT	&  	broj parkirališnih mjesta na parkiralištu	\\ \hline
 					\SetCell{LightBlue} KorisnikID	& INT &  jedinstveni ID korisnika	\\ \hline 
-	\end{longtblr} \\
-	
+	\end{longtblr}	
 \paragraph{}
 {\emph{Rezervacija}\\
-Entitet Rezervacija sadrži informacije vezanie za rezervacije pojedinih parkirnih mjesta i sadrži sljedeće atribute:
+Entitet Rezervacija sadrži informacije vezane za rezervacije pojedinih parkirnih mjesta i sadrži sljedeće atribute:
 ReservationID koji je primarni ključ entiteta, KorisnikID, ParkingID, DateTimeStart, DateTimeEnd i ParkingPlaceId. Strani ključevi entiteta \emph{Rezervacija} su KorisnikID i ParkingID.
 Navedeni je entitet u vezi \emph{Many-to-One} s entitetom Korisnik preko atributa KorisnikID.
 }
@@ -122,8 +162,7 @@ Navedeni je entitet u vezi \emph{Many-to-One} s entitetom Korisnik preko atribut
 					DateTimeStart	& DATETIME &  početno datum-vrijeme rezervacije  	\\ \hline 
 					DateTimeEnd & DATETIME &  završno datum-vrijeme rezervacije \\ \hline 
 					ParkingPlace ID & INT	&  	jedinstveni ID parkirališnog mjesta	\\ \hline 
-	\end{longtblr} \\
-	
+	\end{longtblr} 
 \paragraph{}
 {\emph{Wallet}\\
 Entitet Wallet sadrži informacije vezane za novčanik korisnika i njegova sredstva. Sadrži sljedeće atribute:
@@ -141,10 +180,9 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 					} %definicija širine tablice, širine stupaca, poravnanje i broja redaka naslova tablice
 					\hline \SetCell[c=3]{c}{\textbf{Wallet}}	 \\ \hline[3pt]
 					\SetCell{LightGreen}WalletID & INT	&  	jedinstveni ID novčanika  	\\ \hline
-					\SetCell{LightBlue} KorisnikID	& VARCHAR &   jedinstveni ID korisnika	\\ \hline 
+					\SetCell{LightBlue} KorisnikID	& INT &   jedinstveni ID korisnika	\\ \hline 
 					Balance	& MONEY &   iznos sredstava u novčaniku korisnika	\\ \hline 
-	\end{longtblr}\\
-	
+	\end{longtblr}
 
 
 \subsection{Dijagram baze podataka}
@@ -157,6 +195,22 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 \end{figure}
 
 \section{Dijagram razreda i opis razreda}
+
+\paragraph{}
+{Model razredi preslikavaju strukturu baze podataka u aplikaciji. Implementirane metode direktno komuniciraju s bazom podataka te vraćaju trazene podatke.
+Razred Korisnik predstavlja neregistriranog korisnika koji se moze registrirati u sustav kao klijent ili voditelj parkinga, unoseći osnovne informacije.  Neregistrirani korisnik može vidjeti sva parkirna mjesta i posebno slobodna parkirna mjesta.
+Razred Klijent predstavlja korisnika koji je registriran u sustav. On moze koristiti osnovne funkcionalnosti sustava kao i neregistrirani korisnik i posebno dobiti informacije o zauzetosti pojedinih mjesta u stvarnom vremenu. Osim toga može nadoplatiti svoj novčanik i rezervirati parkirno mjesto.
+Razred Voditelj parkinga predstavlja registriranog korisnika koji može dodati parkirališta.
+Razred Administrator predstavlja administratora sustava koji ima najvece ovlasti. Ima mogućnost mijenjanja podataka registriranih korisnika i uklanjanje istih. Posebno potvrđuje voditelje parkirališta. 
+Razred Novčanik predstavlja novčanik klijenta te prikazuje iznos njegovih raspoloživih sredstava.
+Razred Parkiralište predstavlja parkiralište koje je dodao voditelj parkinga.
+}
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=1\linewidth]{dijagrami/SpotPickerModelsDiagram.png}
+	\caption{  Dijagram razreda - dio Models}
+	\label{fig:modelsdiagram}
+\end{figure}
 
 
 \eject
