--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -12,18 +12,21 @@
 	} %definicija širine tablice, širine stupaca, poravnanje i broja redaka naslova tablice
 	\hline
 	\textbf{Rev.} & \textbf{Opis promjene/dodatka}	&  	\textbf{Autori}  & \textbf{Datum}	\\ \hline
-	0.1	& Napravljen predložak & Mario Olčar  & 22.10.2023	\\ \hline 
-	\\ \hline
-	0.2	& Dodani opisi obrazaca uporabe & Paula Močinić  & 8.11.2023	\\ \hline 
-	\\ \hline
-	0.3	& Dodani dijagrami obrazaca uporabe & Paula Močinić  & 8.11.2023	\\ \hline 
-	\\ \hline
-	0.4	& Dodani sekvencijski dijagrami i njihovi opisi & Paula Močinić  & 9.11.2023	\\ \hline
-	\\ \hline
-	0.5	& Stvorena mapa sa slikama dijagrama & Paula Močinić  & 12.11.2023	\\ \hline
-	\\ \hline
-	0.6	& Dodani ostali zahtjevi & Paula Močinić  & 13.11.2023	\\ \hline
+	0.01 & Napravljen predložak & Mario Olčar  & 22.10.2023 \\ \hline 
+	0.10 & Dodan opis zadatka & Mario Olčar & 29.10.2023 \\ \hline 
+	0.19 & Dodani opisi obrazaca uporabe & Paula Močinić & 8.11.2023 \\ \hline 
+	0.28 & Dodani dijagrami obrazaca uporabe & Paula Močinić  & 8.11.2023 \\ \hline 
 	
+	0.37 & Dodani sekvencijski dijagrami i njihovi opisi & Paula Močinić  & 9.11.2023 \\ \hline 
+	0.46 & Stvorena mapa sa slikama dijagrama & Paula Močinić  & 12.11.2023 \\ \hline 
+	0.55 & Dodani ostali zahtjevi & Paula Močinić  & 13.11.2023 \\ \hline 
+	0.61 & Dodani funkcijski zahtjevi & Ivan Bušljeta  & 15.11.2023 \\ \hline 
+	
+	0.70 & Dodan ER dijagram & Lovro De Villa  & 15.11.2023 \\ \hline 
+	0.75 & Dodan opis baze podataka i tablice & Tomislav Marenić  & 16.11.2023 \\ \hline 
+	0.79 & Dodan opis arhitekture i dizajna sustava & Lovro De Villa  & 16.11.2023 \\ \hline 
+	0.80 & Ispravak pogreške, dodan dijagram modela i njegov opis & Tomislav Marenić  & 17.11.2023 \\ \hline 
+	0.99 & Ispravak gramatičkih pogrešaka & Ivan Bušljeta, Mario Olčar & 17.11.2023 \\ \hline
 \end{longtblr}
 
 
