--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -197,6 +197,21 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 \section{Dijagram razreda i opis razreda}
 
 \paragraph{}
+{Na slikama 4.3, 4.4 i 4.5 su prikazani razredi koji pripadaju \emph{backend}\\dijelu MVC
+arhitekture. Razredi prikazani na slici 4.3 nasljeduju Controller razred. Metode implementirane u tim razredima manipuliraju s DTO (Data transfer object), a oni su dohvaćeni pomoću metoda implementiranih u Model razredima. Metode implementirane u Controller razredima vraćaju JSON datoteke s html status kodom.
+}
+\vfill
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=1\linewidth]{dijagrami/ControllersDiagram.png}
+	\caption{Dijagram razreda - dio Controllers}
+	\label{fig:controllersdiagram}
+	% Nakon \caption, stavite \vfill kako biste ostavili prazan prostor
+	\vfill
+\end{figure}
+
+
+\paragraph{}
 {Model razredi preslikavaju strukturu baze podataka u aplikaciji. Implementirane metode direktno komuniciraju s bazom podataka te vraćaju trazene podatke.
 Razred Korisnik predstavlja neregistriranog korisnika koji se moze registrirati u sustav kao klijent ili voditelj parkinga, unoseći osnovne informacije.  Neregistrirani korisnik može vidjeti sva parkirna mjesta i posebno slobodna parkirna mjesta.
 Razred Klijent predstavlja korisnika koji je registriran u sustav. On moze koristiti osnovne funkcionalnosti sustava kao i neregistrirani korisnik i posebno dobiti informacije o zauzetosti pojedinih mjesta u stvarnom vremenu. Osim toga može nadoplatiti svoj novčanik i rezervirati parkirno mjesto.
