Ispravk gramatičkih pogrešaka, promijenjen dnevnik dokumentacije

--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -197,7 +197,7 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 \section{Dijagram razreda i opis razreda}
 
 \paragraph{}
-{Na slikama 4.3, 4.4 i 4.5 su prikazani razredi koji pripadaju \emph{backend}\\dijelu MVC
+{Na slikama 4.3, 4.4 i 4.5 su prikazani razredi koji pripadaju \emph{backend} dijelu MVC
 arhitekture. Razredi prikazani na slici 4.3 nasljeduju Controller razred. Metode implementirane u tim razredima manipuliraju s DTO (Data transfer object), a oni su dohvaćeni pomoću metoda implementiranih u Model razredima. Metode implementirane u Controller razredima vraćaju JSON datoteke s html status kodom.
 }
 \vfill
