--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -28,6 +28,7 @@
 	0.79 & Dodan opis arhitekture i dizajna sustava & Lovro De Villa  & 16.11.2023 \\ \hline
 	0.80 & Ispravak pogreške, dodan dijagram modela i njegov opis & Tomislav Marenić  & 17.11.2023 \\ \hline
 	0.99 & Ispravak gramatičkih pogrešaka & Ivan Bušljeta, Mario Olčar & 17.11.2023 \\ \hline
+	0.89 & Dodan dijagram kontrolera i njegov opis & Lovro De Villa & 17.11.2023 \\ \hline
 \end{longtblr}
 
 
