--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -29,6 +29,7 @@
 	0.80 & Ispravak pogreške, dodan dijagram modela i njegov opis & Tomislav Marenić  & 17.11.2023 \\ \hline
 	0.99 & Ispravak gramatičkih pogrešaka & Ivan Bušljeta, Mario Olčar & 17.11.2023 \\ \hline
 	0.89 & Dodan dijagram kontrolera i njegov opis & Lovro De Villa & 17.11.2023 \\ \hline
+	0.88 & Dodan dijagram DTO i njegov opis & Ivan Bušljeta & 17.11.2023 \\ \hline
 \end{longtblr}
 
 
