Dodavanje preostalih poglavlja za napisati
Dodana poglavlja:
	 Implementacija i korisničko sučelje
		-> potrebno dopuniti
	Zaključak i budući rad
		-> potrebno dopuniti

Dodana potpoglavlja
	dijagram stanja
		-> potrebno dopuniti
	dijagram aktivnosti
		-> potrebno dopuniti
	dijagram komponenti
		-> potrebno dopuniti

--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -238,5 +238,11 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 	\label{fig:modelsdiagram}
 \end{figure}
 
+\pagebreak
+
+\section{dijagram stanja}
+\section{dijagram aktivnosti}
+\section{dijagram komponenti}
+
 
 \eject
