--- a/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
+++ b/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
@@ -20,6 +20,7 @@
 	\usepackage[classicReIm]{kpfonts}
 	\usepackage{hyperref}
 	\usepackage{fancyhdr}
+	\usepackage{placeins}
 	
 	\usepackage{float}
 	\usepackage{setspace}
@@ -117,7 +118,6 @@
 		
 		
 		\tableofcontents
-		
 		
 		\include{Dnevnik_promjena_dokumentacije}
 		\include{Opis_projektnog_zadatka}
